--- a/gofeatup/package.json
+++ b/gofeatup/package.json
@@ -6,11 +6,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^3.9.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "mdbreact": "^5.0.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-sidebar": "^0.0.1",
