--- a/gofeatup/package.json
+++ b/gofeatup/package.json
@@ -12,12 +12,15 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "doka": "^0.1.0",
     "mdbreact": "^5.0.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-sidebar": "^0.0.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.4",
+    "react-dropzone-uploader": "^2.11.0",
     "react-jinke-music-player": "^4.22.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
